Fixed overlapping issue, replaced table data in events with pulled data from backend

--- a/src/pages/Events/EventsHome/EventsHome.css
+++ b/src/pages/Events/EventsHome/EventsHome.css
@@ -8,7 +8,6 @@
 }
 
 .events-home-buttons button {
-  z-index: 20;
   transition: 0.2s;
 }
 
